--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 [htv]
 # login credentials
 
-email="nowayhosey@gg.gg"
-password="skrtskrt"
+email="lucifer95296@gmail.com"
+password="Akash2007A"
 
 [etc]
 # other things
